# Xerus

./: README.md  configureTarogeDAQ.sh  readme.txt
PowerMonitor/: FindDevice.sh  ForcePowerOff.sh  LoadHKSetting.sh  LoadHKSetting.sh~  PIDCheck  PIDCheck.cpp  PMFind.sh  PMKill.sh  PMResume.sh  PowerMonitor.sh  PowerOff.sh  README  SYTest.sh  shutdown_realTime.txt
PowerMonitor/HKLog/: PowControlLog-201712.txt~  PowControlLog-201805.txt  PowControlLog-201806.txt  PowControlLog-201807.txt  PowControlLog-201907.txt  PowControlLog-201908.txt
PowerMonitor/PowerController/: PowerController.ino
cron/: crontab-backup-20190814.txt
daq/: BootUpRecord.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.txt  log_power_ready.txt  power_ready.txt  ps6000conT4  runTaroge.sh
doc/: timebase.ods
script/: TarogeIOConstant.sh
tarogeM-script/: appendTimestamp.sh  genEvtSelTxt.sh  getAllDac.py  processQueueConfig.sh  processTarogeMData.sh  runSSTServer.sh  runTCPComm.sh  runUSBComm.sh
